# monitest_1

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  starting-doc.txt  upgrade_planning_docs_1
backend/: Dockerfile  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_users_and_refresh_tokens.py  a2b3c4d5e6f7_migrate_probe_region_to_monitor_regions.py  a9b8c7d6e5f4_add_monitor_expiry_status_table.py  b1c2d3e4f5a6_add_expiry_alert_threshold_tracking.py  b3c4d5e6f7a8_add_active_region_to_monitors.py  b8c1d2e3f4a5_add_monitoring_core_tables.py  c1d2e3f4a5b6_add_probe_region_and_http_metrics.py  c9d8e7f6a5b4_add_maintenance_notes_to_status_pages.py  d4e5f6a7b8c9_add_probe_region_to_check_runs.py  d9e8f7a6b5c4_add_accepted_status_codes_to_monitors.py  e2f1d0c9b8a7_add_incident_alert_policy_fields.py  e7f8a9b0c1d2_add_probe_regions_table.py  f0e1d2c3b4a5_merge_probe_regions_head.py  f4a3b2c1d0e9_add_status_pages_tables.py  fc7e6f0bc087_initial.py
backend/app/: main.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/integrations/: mail.py
backend/app/models/: __init__.py  monitor.py  monitor_expiry.py  probe_region.py  status_page.py  user.py
backend/app/schemas/: auth.py  monitor.py  monitor_expiry.py  probe_region.py  runtime.py  (+1 more)
backend/moni_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_checks_logic.py  test_expiry_logic.py  test_monitors_api.py  test_security_config.py  test_status_pages_api.py
(+68 files in other folders)
